[gd_scene load_steps=10 format=3 uid="uid://b36g58ec2c46g"]

[ext_resource type="Script" uid="uid://cin1tcmqbaqj0" path="res://Scripts/Gameplay/Shared Scripts/ENEMY_BOT.gd" id="1_vbwis"]
[ext_resource type="SpriteFrames" uid="uid://bal6hmquu8at3" path="res://Game Assets/Character Skins/char_ballerina.tres" id="2_vbwis"]
[ext_resource type="PackedScene" uid="uid://ncfc7h4rqc8n" path="res://Scenes/Gameplay/Components/attack_component.tscn" id="3_hd6jw"]
[ext_resource type="PackedScene" uid="uid://c372fbrfcc2lq" path="res://Scenes/Gameplay/Components/health_component.tscn" id="4_bkmbi"]
[ext_resource type="PackedScene" uid="uid://cmc3yidsl6sba" path="res://Scenes/Gameplay/Components/hitbox_component.tscn" id="5_bw6hs"]
[ext_resource type="PackedScene" uid="uid://c3wlrr16mnn6l" path="res://Animations/Components/BloodyDeathAnimation.tscn" id="6_dsbtu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_exuau"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g8hl7"]
radius = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rl784"]
radius = 56.0
height = 158.0

[node name="CapuccinaNormalEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_vbwis")
enemy_type = "normal_enemy"
can_destroy_objects = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.996449, 0.417132, 0.348938, 1)
sprite_frames = ExtResource("2_vbwis")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 35)
shape = SubResource("CircleShape2D_exuau")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
debug_enabled = true

[node name="NavigationTimer" type="Timer" parent="NavigationAgent2D"]
wait_time = 0.5
autostart = true

[node name="AttackCooldownTimer" type="Timer" parent="."]

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_g8hl7")

[node name="AttackComponent" parent="." instance=ExtResource("3_hd6jw")]
attack_damage = 15.0

[node name="HealthComponent" parent="." instance=ExtResource("4_bkmbi")]
MAX_HEALTH = 50.0

[node name="HealthBar" type="ProgressBar" parent="HealthComponent"]
offset_left = -50.0
offset_top = -82.0
offset_right = 48.0
offset_bottom = -55.0

[node name="HideHealthBarTimer" type="Timer" parent="HealthComponent"]
wait_time = 3.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_bw6hs")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(6, 18)
shape = SubResource("CapsuleShape2D_rl784")

[node name="SFX_bot" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0
bus = &"SFX"

[node name="BloodyDeathAnimation" parent="." instance=ExtResource("6_dsbtu")]

[connection signal="timeout" from="NavigationAgent2D/NavigationTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_damage_cooldown_timer_timeout"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_area_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_damage_area_body_exited"]
